--- a/src/app/pages/todos/todos.component.scss
+++ b/src/app/pages/todos/todos.component.scss
@@ -1,10 +1,10 @@
-/* HeroesComponent's private CSS styles */
+/* TodosComponent's private CSS styles */
 .selected {
   background-color: #cfd8dc !important;
   color: white;
 }
 
-.heroes {
+.todos {
   margin: 0 0 2em 0;
   list-style-type: none;
   padding: 0;
@@ -21,7 +21,7 @@
   }
 }
 
-.heroes {
+.todos {
   li.selected:hover {
     background-color: #bbd8dc !important;
     color: white;
